--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
         <div class="container">
-      lizatrofimova69@gmail.com
+        <a class="header-email"
+           href="mailto:lizatrofimova69@gmail.com">lizatrofimova69@gmail.com</a>
         </div>
     </header>
 
@@ -24,6 +25,9 @@
     <section class="intro">
         <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+            <figure class="user-image">
+            <img src="files/user.jpg" width="928" height="536" alt="Фоторгафия Неопознанного Енота">
+            </figure>
       <h3>Пара слов о себе</h3>
       <p>Учусь верстать сайты.</p>
       <h3>Чем могу быть полезен</h3>
@@ -34,8 +38,13 @@
     <section class="portfolio">
         <div class="container">
       <h2 class="subheading">Мои работы</h2>
+            <figure class="project-image">
+            <img src="files/project.jpg" width="928" height"536" alt="Сайт инструктора Кекса">
+            </figure>
 
       <h3>Сайт инструктора Кекса</h3>
+      <p>Мой первый сайт</p>
+            <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -45,7 +54,8 @@
 
     <footer class="page-footer">
         <div class="container">
-      lizatrofimova69@gmail.com
+           <a class="footer-email"
+              href="mailto:lizatrofimova69@gmail.com">lizatrofimova69@gmail.com</a>
         </div>
     </footer>
   </body>
